--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -54,12 +54,12 @@
 						</div>
 					</div>
 					
-					<!-- <div class="form-group row">
-						<label for="file" class="col-sm-2 col-form-label">Foto</label>
-						<div class="col-sm-6">
-							<input type="file" name="file" class="form-control" />
+					<div class="form-group row">
+						<label for="file" class="col-sm-2 col-form-label">Photo</label>
+						<div class="col-md-6">
+							<input type="file" name="file" class="form-control col-md-8" />
 						</div>
-					</div> -->
+					</div>
 					
 					<div class="form-group row">
 						<div class="col-sm-6">
