--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -11,9 +11,11 @@
 			<div class="card-header" th:text="${title}"></div>
 			<div class="card-body">
 			
-				<!-- <img th:if="${#strings.length(client.photo) > 0}" class="img-thumbnail rounded float-left"
-					style="max-width: 25%;" th:src="@{'/uploads/' + ${client.photo}}"
-					th:alt="${client.photo}" /> -->
+				<div th:if="${client.photo ne null}">
+					<img th:if="${#strings.length(client.photo) > 0}" class="img-thumbnail img-fluid float-left"
+					style="max-width: 22%;" th:src="@{'/uploads/' + ${client.photo}}"
+					th:alt="${client.photo}" />
+				</div>
 
 				<ul class="list-group">
 					<li class="list-group-item active" th:text="${client.name} + '	' + ${client.lastName} "></li>
