--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -44,20 +44,40 @@
 								th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
 						</div>
 					</div>
+					
+					<div class="form-group row">
+						<label class="col-sm-2 col-form-label">Phone Number*</label>
+						<div class="col-sm-6">
+							<input type="text" th:field="*{phoneNumber}" class="form-control col-md-6"
+								th:errorclass="'form-control alert-danger'" /> <small
+								class="form-text text-danger"
+								th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}"></small>
+						</div>
+					</div>
+					<div class="form-group row">
+						<label class="col-sm-2 col-form-label">Country*</label>
+						<div class="col-sm-6">
+							<input type="text" th:field="*{country}" class="form-control col-md-6"
+								th:errorclass="'form-control alert-danger'" /> <small
+								class="form-text text-danger"
+								th:if="${#fields.hasErrors('country')}" th:errors="*{country}"></small>
+						</div>
+					</div>
+					
 					<div class="form-group row">
 						<label class="col-sm-2 col-form-label">Date of Birth*</label>
 						<div class="col-sm-6">
-							<input type="date" class="form-control col-md-4" th:field="*{createAt}"
+							<input type="date" class="form-control col-md-4" th:field="*{dateBorn}"
 								th:errorclass="'form-control alert-danger'" /> <small
 								class="form-text text-danger"
-								th:if="${#fields.hasErrors('createAt')}" th:errors="*{createAt}"></small>	
+								th:if="${#fields.hasErrors('dateBorn')}" th:errors="*{dateBorn}"></small>	
 						</div>
 					</div>
 					
 					<div class="form-group row">
 						<label for="file" class="col-sm-2 col-form-label">Photo</label>
-						<div class="col-md-6">
-							<input type="file" name="file" class="form-control col-md-8" />
+						<div class="col-sm-6">
+							<input type="file" name="file" class="form-control col-md-10"/>
 						</div>
 					</div>
 					
