--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:fragment="head">
 <meta charset="UTF-8" />
 <title th:text=" ${title}"></title>
@@ -23,6 +23,18 @@
 					</a></li>
 					</li>
 				</ul>
+				<ul class="navbar-nav ml-auto">
+					<li sec:authorize="!isAuthenticated()"><a class="btn btn-outline-primary" href="@{/login}">Sign In</a></li>
+					<li sec:authorize="isAuthenticated()" class="dropdown show">
+  						<a class="btn btn-outline-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" 
+  							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span sec:authentication="name"></span></a>
+  						<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+    						<form id="logoutForm" th:action="@{/logout}" method="post">
+								<button class="dropdown-item" ondblclick="document.getElementById('logoutForm').submit();" type="submit">Sign Out</button>
+							</form>
+  						</div>
+					</li>
+				</ul>
 			</div>
 		</nav>
 		
@@ -37,6 +49,9 @@
 	<footer th:fragment="footer" class="container">
 		<hr />
 		<img th:src="@{/images/spring.png}" alt="Spring logo" />
+		<p sec:authorize="isAuthenticated()">
+			User: <span sec:authentication="name"></span> | Roles: <span sec:authentication="principal.authorities"></span>
+		</p>
 		<p>
 			Powered by <a href="https://projects.spring.io/spring-boot/">Spring
 				Boot</a> & <a href="http://www.thymeleaf.org">Thymeleaf</a>.
