--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -20,7 +20,9 @@
 				<ul class="list-group">
 					<li class="list-group-item active" th:text="${client.name} + '	' + ${client.lastName} "></li>
 					<li class="list-group-item" th:text="${client.email}"></li>
-					<li class="list-group-item" th:text="${client.createAt}"></li>
+					<li class="list-group-item" th:text="${client.phoneNumber}"></li>
+					<li class="list-group-item" th:text="${client.country}"></li>
+					<li class="list-group-item" th:text="${client.dateBorn}"></li>
 				</ul>
 
 			</div>
